update the jupyter notebook: FrozenLake-v1

--- a/jupyter-docker/notebooks/HugginFace-RL/FrozenLake-v1/FrozenLake-v1.ipynb
+++ b/jupyter-docker/notebooks/HugginFace-RL/FrozenLake-v1/FrozenLake-v1.ipynb
@@ -66,7 +66,7 @@
     {
      "data": {
       "text/plain": [
-       "<pyvirtualdisplay.display.Display at 0x7f164db53550>"
+       "<pyvirtualdisplay.display.Display at 0x7f152f742320>"
       ]
      },
      "execution_count": 3,
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "id": "f0e0ade8-eca9-4b29-9639-63fb100841cf",
    "metadata": {},
    "outputs": [],
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "088deee4-3851-4c53-ae48-63579480a5ec",
    "metadata": {},
    "outputs": [],
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "d2f07812-4fac-4768-bb11-223dddc749f6",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "id": "25714f22-f4da-4a8d-8d61-9b2c8a3c0bd0",
    "metadata": {},
    "outputs": [],
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "id": "bcab91a3-3574-4a8c-8fb8-e817c589dc9f",
    "metadata": {},
    "outputs": [
@@ -287,7 +287,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10000/10000 [00:01<00:00, 8322.47it/s]\n"
+      "100%|██████████| 10000/10000 [00:01<00:00, 8899.02it/s]\n"
      ]
     }
    ],
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "id": "32bf8b32-9389-4cc5-8b40-9b27729b5870",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10000/10000 [00:02<00:00, 3346.81it/s]\n"
+      "100%|██████████| 10000/10000 [00:03<00:00, 2791.92it/s]\n"
      ]
     }
    ],
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "f38b73a9-f1d8-4019-b021-d299e8cf049b",
    "metadata": {},
    "outputs": [
@@ -323,7 +323,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10000/10000 [00:14<00:00, 689.31it/s]\n"
+      "100%|██████████| 10000/10000 [00:14<00:00, 708.38it/s]\n"
      ]
     }
    ],
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "id": "18e4a5fe-39cc-45d3-9394-9096b6070394",
    "metadata": {
     "scrolled": true
@@ -360,7 +360,7 @@
        "       [0.        , 0.        , 0.        , 0.        ]])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,32 +371,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "id": "9ec947d3-505c-42a0-9588-d55ba7f12793",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[6.14909801e-02, 5.51814657e-02, 6.78442127e-02, 6.22648043e-02],\n",
-       "       [1.71854596e-02, 1.36928633e-03, 2.13065980e-02, 5.95182361e-02],\n",
-       "       [1.04504527e-02, 1.65982932e-02, 1.40057818e-02, 1.98534732e-02],\n",
-       "       [1.02980291e-04, 2.23485062e-03, 7.34850700e-03, 3.02210282e-02],\n",
-       "       [7.77456399e-02, 8.70044810e-03, 9.83740242e-03, 3.66268723e-02],\n",
+       "array([[2.55303841e-01, 1.43102933e-01, 1.34426948e-01, 2.09698958e-01],\n",
+       "       [1.18225989e-02, 1.06367334e-02, 2.15665028e-02, 9.44486972e-02],\n",
+       "       [4.92636724e-02, 4.37971007e-02, 5.04530328e-02, 8.18844872e-02],\n",
+       "       [1.37436611e-02, 1.58647044e-02, 4.37546917e-02, 7.85338412e-02],\n",
+       "       [2.98465698e-01, 7.86663951e-02, 1.07643392e-01, 6.23062728e-02],\n",
        "       [0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
-       "       [6.47875121e-05, 3.60369976e-05, 2.85912870e-04, 6.20075239e-05],\n",
+       "       [6.75246288e-05, 1.32374832e-04, 2.07353616e-02, 1.69732203e-06],\n",
        "       [0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
-       "       [3.09539127e-02, 9.22606589e-02, 2.80700832e-02, 8.21810198e-02],\n",
-       "       [7.17095918e-02, 4.23598659e-01, 4.18173385e-02, 4.20377378e-02],\n",
-       "       [1.62183894e-01, 2.06703052e-02, 2.02778606e-02, 1.03740748e-02],\n",
+       "       [2.08129056e-02, 1.17439585e-01, 1.32810270e-01, 3.21132523e-01],\n",
+       "       [2.80344733e-01, 3.95757392e-01, 1.50062899e-01, 1.47803605e-01],\n",
+       "       [3.19444889e-01, 4.44284605e-01, 7.74727309e-03, 9.64604613e-04],\n",
        "       [0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
        "       [0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00],\n",
-       "       [2.45507881e-01, 2.31340430e-01, 1.48534651e-01, 2.15218924e-01],\n",
-       "       [4.18242707e-01, 4.45534126e-01, 6.14083457e-01, 5.95024315e-01],\n",
+       "       [1.02385655e-01, 1.50462570e-01, 6.32752532e-01, 1.42336160e-01],\n",
+       "       [5.10178340e-01, 8.96592928e-01, 5.62475773e-01, 1.72231480e-01],\n",
        "       [0.00000000e+00, 0.00000000e+00, 0.00000000e+00, 0.00000000e+00]])"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,91 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "id": "6bacdf40-d348-4e8a-9b03-11d6f7a6b685",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0.7, 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ],\n",
-       "       [0. , 0. , 0. , 0. ]])"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "Qtable_frozenlake_8x8"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "id": "fd298b5a-3770-4d4c-a1e2-cd75d4462134",
    "metadata": {},
    "outputs": [
@@ -500,20 +416,18 @@
      "output_type": "stream",
      "text": [
       "Qtable-FrozenLake-4x4 (shape) : (16, 4)\n",
-      "Qtable-FrozenLake-4x4-Slippery (shape) : (16, 4)\n",
-      "Qtable-FrozenLake-8x8 (shape) : (64, 4)\n"
+      "Qtable-FrozenLake-4x4-Slippery (shape) : (16, 4)\n"
      ]
     }
    ],
    "source": [
     "print(f'Qtable-FrozenLake-4x4 (shape) : {Qtable_frozenlake.shape}')\n",
-    "print(f'Qtable-FrozenLake-4x4-Slippery (shape) : {Qtable_frozenlake_slippery.shape}')\n",
-    "print(f'Qtable-FrozenLake-8x8 (shape) : {Qtable_frozenlake_8x8.shape}')"
+    "print(f'Qtable-FrozenLake-4x4-Slippery (shape) : {Qtable_frozenlake_slippery.shape}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 20,
    "id": "99153747-0404-41a4-87ca-91d0f9a1aeab",
    "metadata": {},
    "outputs": [],
@@ -548,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 21,
    "id": "f02003da-3cd7-4240-9856-18f8b26e2051",
    "metadata": {},
    "outputs": [
@@ -556,7 +470,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 100/100 [00:00<00:00, 11608.92it/s]"
+      "100%|██████████| 100/100 [00:00<00:00, 7260.22it/s]"
      ]
     },
     {
@@ -582,22 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "f601e48d-bd9b-449e-9ca0-3a40f4b26149",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from huggingface_hub import HfApi, snapshot_download\n",
-    "from huggingface_hub.repocard import metadata_eval_result, metadata_save\n",
-    "\n",
-    "from pathlib import Path\n",
-    "import datetime\n",
-    "import json"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "id": "54bc740c-8b96-4d3e-89c2-af39a4ee9326",
    "metadata": {},
    "outputs": [],
@@ -629,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 23,
    "id": "d1873664-7458-4f2d-9ad7-d5354e0f6723",
    "metadata": {},
    "outputs": [],
@@ -639,22 +538,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 24,
    "id": "54b5c6c9-66f2-4a62-bd61-09a4c47dde8e",
    "metadata": {},
    "outputs": [],
    "source": [
     "record_video(env_slippery, Qtable_frozenlake_slippery, 'frozenLake_Slippery-v1.mp4',1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "772411f5-3a39-46dd-9903-e2b39e90cb5a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "record_video(env_8x8, Qtable_frozenlake_8x8, 'frozenLake_8x8-v1.mp4',1)"
    ]
   }
  ],
